--- a/user-card/src/less/footer.less
+++ b/user-card/src/less/footer.less
@@ -18,6 +18,18 @@
             font-size: 1.2rem;
             text-decoration: underline;
         }
+
+        a {
+            color: unset;
+            //text-decoration: unset;
+            
+        }
+
+        a:hover {
+            color: white;
+        }
+
+       
     }
 
 }
