--- a/usercards/src/App.css
+++ b/usercards/src/App.css
@@ -14,12 +14,13 @@
 }
 
 .App-header {
-  background-image:linear-gradient(to bottom right, #0066ff, #0000cc, whitesmoke ) ;
+  background-image:linear-gradient(to bottom left, #0066ff, #0000cc, whitesmoke ) ;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-end;
+  justify-content: space-evenly;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
 }
