--- a/usercards/src/App.css
+++ b/usercards/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-image:linear-gradient(to bottom left, #0066ff, #0000cc, whitesmoke ) ;
+  background-image:linear-gradient(to top right, #0066ff, #0000cc, whitesmoke ) ;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -36,4 +36,49 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.card {
+  width:80%;
+  margin: 0 auto;
+  display:flex;
+  flex-direction: row;
+  background-color: white;
+  box-shadow: 2px 2px black;
+}
+ .card-body {
+  color: #0000cc;
+  text-align: left;
+  width:50%;
+  margin:0;
+  display:flex;
+  flex-direction: column;
+
+}
+
+.card-img {
+  width:30%;
+  /* height: 25vh; */
+  margin: 2%;
+}
+
+.card-subtitle {
+  font-size: large;
+  font-weight: bold;
+}
+
+.card-title {
+  font-size: x-large;
+  font-weight: bolder;
+}
+
+.card-text {
+  font-size: medium;
+  font-weight: 500;
+  margin:0;
+}
+
+.card-link {
+  font-size: medium;
+  font-weight: 500;
 }
