added loading transition with react-spring

--- a/github-usercard/src/index.css
+++ b/github-usercard/src/index.css
@@ -11,3 +11,13 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
 }
+
+#root {
+	min-height: 100vh;
+
+	background-image: url('./image/githublogo.png');
+	background-size: 70%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+}
