--- a/src/cards.css
+++ b/src/cards.css
@@ -4,7 +4,7 @@
 }
 
 .cards {
-    border: 5px solid red;
     width: 25%;
-    
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
 }
