--- a/src/cards.css
+++ b/src/cards.css
@@ -1,10 +1,9 @@
-.card-section {
-    display: flex;
-    justify-content: space-between;
-}
 
 .cards {
-    width: 25%;
+    padding: 25px 0;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    height: 25%;
+    width: 25%;
+    
 }
