--- a/githubapp/src/App.css
+++ b/githubapp/src/App.css
@@ -58,6 +58,13 @@ button{
 	text-decoration:none;
 	text-shadow:0px 1px 0px #ffee66;
 }
-h1{
+/* h1{
   font-size: 2.5rem;
+} */
+
+.header{
+  color:white;
+  font-size:3rem;
+  background-image: url("https://opengameart.org/sites/default/files/cyberpunk-street.png");
+margin-top: -4rem;
 }
