--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,71 @@
+html {
+  font-size: 62.5%;
+}
 body{
-  background-color: oldlace;
+  background-color: lightgray;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+h1{
+  font-size: 3.2rem;
+}
+
+h2{
+  font-size: 2.8rem;
+  text-align: left;
+}
+h3{
+  font-size:2.4rem;
+}
+p{
+  font-size: 1.8rem;
+}
+
+.my-card{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 35%;
+  border: 2px solid black;
+  box-shadow: 10px black;
+  padding: 10px;
+  background-color: lightskyblue;
+  margin:5%;
+  margin-left: 32%;
+}
+.my-card img{
+  border: 2px solid black;
+}
+
+.my-card h2{
+  margin: 0%;
+  margin-left: 10%;
+
+}
+
+.userText{
+  margin-top:10%;
+}
+.followers{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: 21.5%;
+}
+
+.followerCard{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 30%;
+  border: 2px solid black;
+  box-shadow: 10px black;
+  padding: 10px;
+  background-color: lightskyblue;
+  margin: 2%;
 }
