--- a/user-card/src/App.css
+++ b/user-card/src/App.css
@@ -3,31 +3,65 @@
 
 .App {
 
-  background-image: url("https://cdn.pixabay.com/photo/2020/04/21/11/50/batman-5072795_960_720.jpg");
+  background-image: url("https://cdn.pixabay.com/photo/2019/08/24/09/15/cassette-recorder-4427214_960_720.jpg");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
  
   text-align: center;
-  color: black;
+  color: red;
   font-family: 'Permanent Marker', cursive;
+  text-shadow: 2px 2px black;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+#users{
+  box-sizing: border-box;
+  margin-left: 5px;
+  text-align: center;
+  width: 20rem;
+  height: 35rem;
+  margin: 1rem;
+  padding: 10px;
+  background-color: black;
+  opacity: 90%;
+
+  /* border: 2px solid black; */
+  box-shadow:
+  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+  0 12.5px 10px rgba(0, 0, 0, 0.06),
+  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  0 100px 80px rgba(0, 0, 0, 0.12)
+;
+
+box-shadow: 
+inset 0 -3em 3em rgba(0,0,0,0.1), 
+      /* 0 0  0 2px rgb(255,255,255), */
+      0.3em 0.3em 1em rgba(0,0,0,0.3);
 }
 
 h1{
   font-family: 'Permanent Marker', cursive;
+  color: black;
   text-shadow: 6px 2px #ff0000;
   font-size: 7rem;
+}
+h2{
+  font-size: 2.5rem;
 }
 
 button {
   font-family: 'Permanent Marker', cursive;
-  background-color: grey;
+  background-color: whitesmoke;
   margin: 5px;
-  width: 8%;
+  width: 10rem;
 }
 
 input {
-  width: 15%;
+  width: 15rem;
 }
 
 #self{
@@ -35,17 +69,36 @@ input {
   flex-direction: column;
   align-items: center;
   margin: 2rem;
+  font-family: 'Permanent Marker', cursive;
+  color: black;
+  text-shadow: 4px 2px #ff0000;
+  font-size: 4;
+  
 }
 
 #followers{
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
-  margin: 1rem;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 2rem;
+  text-align: center;
 }
 
 img {
-  border-radius: 20%;
+  border-radius: 10%;
   
 
+}
+
+@media (max-width: 700px) {
+  h1 {
+    font-size: 4rem;
+  }
+  #followers{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
