more goofy css tweaks

--- a/user-card/src/App.css
+++ b/user-card/src/App.css
@@ -24,8 +24,9 @@
   height: 35rem;
   margin: 1rem;
   padding: 10px;
-  background-color: black;
+  /* background-color: black; */
   opacity: 90%;
+  border-radius: 4%;
 
   /* border: 2px solid black; */
   box-shadow:
@@ -87,7 +88,8 @@ input {
 }
 
 img {
-  border-radius: 10%;
+  border-radius: 4%;
+  width: 20rem;
   
 
 }
