--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*{
+  background-color: lightcoral;
+  color: whitesmoke;
+  text-decoration: none;
+}
