--- a/user-card/src/App.css
+++ b/user-card/src/App.css
@@ -6,20 +6,52 @@ body{
   background-color: gray;
 }
 
+h1{
+  text-align:center;
+  font-size: 35px;
+  color:white;
+  border-bottom: 2px solid white;
+}
+
+.ParentCardDiv{
+  display:flex;
+  flex-direction:row;
+  flex-wrap: wrap;
+  width:100%;
+}
+
 .UserCard {
   background-color:white;
   width:30%;
   display:flex;
   flex-direction: column;
   align-items: center;
-  margin:auto 1%;
+  margin:auto .5%;
 }
 
 h3{
   font-size:30px;
-  border-bottom: 2px black solid
+  border-bottom: 2px gray solid;
+  color: gray;
 }
 
 img {
   width: 80%;
+  margin: 0% auto 10% auto;
+  border-radius:125px;
+}
+
+.cardLinks{
+  margin:0% auto 5% auto;
+  background-color: gray;
+}
+
+span{
+  color: white;
+  border: 2px white solid;
+}
+
+a{
+  text-decoration:none;
+  color: white;
 }
