--- a/react-github-user-card/src/App.css
+++ b/react-github-user-card/src/App.css
@@ -54,6 +54,20 @@ button {
   
 }
 
+.error{
+  display:flex;
+  background-color:"snow";
+  color:"red";
+  font-size:1rem;
+  background-image:url("https://images.unsplash.com/photo-1578328819058-b69f3a3b0f6b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80");
+  object-fit: contain;
+  overflow: hidden;
+  width:90%;
+  height:500px; 
+  margin: 0 auto;
+  padding-top:40px;
+}
+
 /* .calendar-graph{
   width:500px;
   height: 100px;
