fetch working card and styling remains after search form is completed

--- a/react-github-user-card/src/App.css
+++ b/react-github-user-card/src/App.css
@@ -13,26 +13,25 @@
   }
 }
 
-.App-header {
+.App-header .container{
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: black
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.col-2{
+  margin: 1% auto;
+  text-align: center;
 }
+.col-3{
+  margin: 1% auto;
+}
+
