--- a/github-usr-cards/src/index.css
+++ b/github-usr-cards/src/index.css
@@ -24,11 +24,12 @@ background: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
 }
  
 .container {
-max-width: 800px;
+max-width: 400px;
 margin: 50px auto;
 padding: 30px;
 display: flex;
 flex-direction: column;
+justify-content: space-evenly;
 align-items: center;
 }
 
@@ -47,16 +48,25 @@ height: 150px;
 
 .header p {
 font-size: 48px;
+
 }
 
+
 .cards {
+  display: flex;
 width: 100%;
+height:100%;
+flex-direction: column;
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height:100%;
 width: 100%;
 padding: 20px;
-display: flex;
 border-radius: 5px;
 box-shadow: 0 1px 6px -2px #000;
 background-color: #FFF;
@@ -64,6 +74,10 @@ margin-bottom: 30px;
 }
 
 .card img {
+  /* display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  flex-direction: row; */
 width: 150px;
 height: 150px;
 border-radius: 3px;
@@ -77,6 +91,9 @@ font-size: 3.4rem;
 .card p {
 font-size: 1.4rem;
 margin-bottom: 3px;
+width:50%;
+display: flex;
+flex-direction: row;
 }
 /* 
 .card .username {
