--- a/github-usr-cards/src/index.css
+++ b/github-usr-cards/src/index.css
@@ -22,7 +22,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 background: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
 }
- 
+ h1{
+   font-size:1rem;
+   color:black;
+ }
 .container {
 max-width: 400px;
 margin: 50px auto;
