--- a/react-github-usercard/src/App.css
+++ b/react-github-usercard/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.innerCard {
+  margin: 1%;
+  -webkit-box-shadow: 0px 3px 26px -4px rgba(125,124,124,1);
+-moz-box-shadow: 0px 3px 26px -4px rgba(125,124,124,1);
+box-shadow: 0px 3px 26px -4px rgba(125,124,124,1);
+
+}
