--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+.app {
+  background-image: url(depositphotos_77376688-stock-illustration-floral-vector-background.jpg);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Main {
+  width: auto;
+  height: auto;
+  margin: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.followerDiv {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.follower {
+  margin: 50px;
+  width: 200px;
+}
+
+.header {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+Form {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.formButton {
+  width: 100%;
+}
+
+h1 {
+  padding: 30px;
 }
