--- a/React-Github-User-Card/src/App.css
+++ b/React-Github-User-Card/src/App.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-html,
-body {
+html {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color: white;
+}
+
+body {
+  background: border-box;
+  margin: 25px;
 }
 
 h1,
@@ -21,16 +26,22 @@ span {
 }
 
 .App {
+  border: 25px solid #ddd;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
   text-align: center;
   font-family: sans-serif;
+  margin: 3%;
+}
+
+.App h1 {
+  font-size: 4rem;
+  text-shadow: 3px 3px #ddd;
 }
 
 .user-card {
-  border: 2px solid #ddd;
   margin:5%;
-  margin-top: 5%;
+  margin-top: 2%;
   padding: 10%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
 }
 
 .indiviual-user {
@@ -50,3 +61,7 @@ span {
 .individual-info a {
   color: black;
 }
+
+/* .search-user {
+
+} */
