--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+img {
+  height: 20vh;
+}
+
+.userCard {
+  border: 1px solid black;
+  width: 30%;
+  padding: 2% 0;
+  margin: auto;
+  background-color: bisque;
+}
