UserInfo component filled with dummy data and added to app component

--- a/user-card/src/App.css
+++ b/user-card/src/App.css
@@ -1,5 +1,20 @@
+
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.userCard{
+  border: solid 1px black;
+  width: 50%;
+}
+
+.userInfo{
+  border: solid 1px blue;
+  margin: 5px;
 }
 
 
