--- a/user-card/src/App.css
+++ b/user-card/src/App.css
@@ -12,9 +12,17 @@
   width: 50%;
 }
 
+.userCard img{
+  border: solid 1px black;
+  border-radius: 100px;
+}
 .userInfo{
   border: solid 1px blue;
   margin: 5px;
 }
 
+.gitStats{
+  border: solid 1px green;
+  margin: 5px;
+}
 
