--- a/user-card/src/App.css
+++ b/user-card/src/App.css
@@ -2,37 +2,29 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+  text-align: center;
+  background-color: #444;
+  color: black;
+  border: .1rem solid black;
+  border-radius: 15px;
+  box-shadow: 0 0 1.5rem black;
+  opacity: 0.9;
+  max-width: 50%;
+  padding: 1.5rem;
+  margin: 3rem 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1, h2, h3, h4, h5, h6 {
+  padding: 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+footer {
+  margin-top: 5rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.name{
+  border-radius: 15px;
+  box-shadow: 0 0 1rem black;
+  margin: 3rem 0;
 }
